--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
+    "socket.io": "^4.2.0",
     "svelte-preprocess": "^4.9.4"
   }
 }
