--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^16.9.1",
     "@types/socket.io": "^3.0.2",
     "express": "^4.17.1",
     "socket.io": "^4.2.0"
